# Anku-Bot

./: .gitignore  https___chatgpt.docx
HEXAPOD/4leg_spider/firmware_by_electrot3d/: CALIBRATION_PROGRESS.txt  GoBLE.cpp  GoBLE.h  MiniKame.cpp  MiniKame.h  Octosnake.cpp  Octosnake.h  QueueArray.h  SERVO_TEST_DATA.txt  firmware_by_electrot3d.ino  robot_control.py  test_all_servos.py
HEXAPOD/HEXAPOD/: refernce video.txt
HEXAPOD/HEXAPOD/basic-position uno  code/: basic-position.ino
Naval/: FLYSKY_CT6B_FS_R6B_SETUP.md  RF_INTEGRATION_PLAN.md  SESSION_2026-03-17_RF_UPDATE.md  SESSION_2026-03-20_RF_REWRITE.md  joystick_bridge.py  launch_naval.sh
Naval/Mecanum_Encoder/: Mecanum_Encoder.ino
Naval/OBS_CAMERA/: cam_stream.py  camera_config.txt  session_log.txt
Naval/naval_web_control/: HDMI_KIOSK_SETUP.md  TAILWIND_SETUP.md  package-lock.json  package.json  start_naval.sh
Naval/naval_web_control/scripts/: naval_cam_server.py  naval_hdmi_kiosk.sh
Naval/naval_web_control/systemd/: naval-hdmi-kiosk.service
Naval/naval_web_control/templates/: index.html
backups/20260109_005118/: restore.sh
gripper_car_ws/src/bringup/robot_bringup/: CMakeLists.txt  package.xml
gripper_car_ws/src/bringup/robot_bringup/launch/: robot.launch.py
gripper_car_ws/src/simulation/arm_sim/: package.xml
gripper_car_ws_rpi_backup/src/naval_web_control/: package.xml  setup.py  start_naval.sh
gripper_car_ws_v0/: frames_2025-11-09_17.09.21.gv
gripper_car_ws_v0/src/mobile_arm_manipulator/: CMakeLists.txt  package.xml
gripper_car_ws_v0/src/mobile_arm_manipulator/arduino/arm_test/arm_full_test/: arm_full_test.ino
gripper_car_ws_v0/src/mobile_arm_manipulator/launch/: rviz.launch.py
gripper_car_ws_v0/src/mobile_arm_manipulator/urdf/: mobile_arm_bot_2.csv  mobile_arm_bot_2.urdf
gripper_car_ws_v0/src/mobile_arm_manipulator_config/: .setup_assistant  CMakeLists.txt
gripper_car_ws_v0/src/mobile_arm_manipulator_config/arduino/mobile_arm_arduino_ros2/: mobile_arm_arduino_ros2.ino
gripper_car_ws_v0/src/mobile_arm_manipulator_config/config/: arduino_serial.yaml  mobile_arm_bot_2.urdf.xacro
gripper_car_ws_v0/src/mobile_arm_manipulator_config/launch/: arduino_bridge.launch.py  arduino_realtime_demo.launch.py  demo.launch.py  realtime_controllers.launch.py  realtime_demo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
gripper_car_ws_v0/src/mobile_arm_manipulator_config/scripts/: arduino_ros2_bridge.py  test_arduino_communication.py  test_pca9685_integration.py  test_servo_mapping.py
gripper_car_ws_v0/src/mobile_arm_manipulator_config/worlds/: empty_world.world
gripper_car_ws_v0/src/mobile_manipulator_bringup/: CMakeLists.txt  package.xml
gripper_car_ws_v0/src/mobile_manipulator_bringup_config/: .setup_assistant  CMakeLists.txt  package.xml
gripper_car_ws_v1/: LIDAR_FINDINGS.md  OBSTACLE_AVOIDANCE_FIXED.md  QUICK_START.md  QUICK_START_OBSTACLE.md  SESSION_2026-02-03.md  SESSION_NOTES.md  SMART_OBSTACLE_AVOIDANCE.md  frames_2025-12-24_22.36.29.gv  network_scan_results.md  slam_rviz.rviz  slam_rviz_fixed.rviz
gripper_car_ws_v1 (another copy)/: 2026-01-03-session-notes.md  OBSTACLE_AVOIDANCE.md  PROJECT_OVERVIEW.md  README.md  ROS2_PLAYBOOK.md  test_arm_servos.py  test_obstacle_avoidance.sh
gripper_car_ws_v1 (another copy)/arduino/: test_unified.py
gripper_car_ws_v1 (another copy)/arduino/mobile_manipulator_unified/: mobile_manipulator_unified.ino
gripper_car_ws_v1 (another copy)/arduino/mobile_manipulator_unified_obstacle/: mobile_manipulator_unified_obstacle.ino
gripper_car_ws_v1 (another copy)/arduino/motor_test/: motor_test.ino
gripper_car_ws_v1 (another copy)/docs/: MOBILE_ARM_COMPLETE.md  QUICK_START.md  SESSION_2026_01_09.md  SESSION_2026_01_23.md  SESSION_STATE.md
gripper_car_ws_v1 (another copy)/maps/: test_map.yaml
gripper_car_ws_v1 (another copy)/scripts/: start_all.sh  start_obstacle_avoidance.sh  stop_robot.sh
gripper_car_ws_v1 (another copy)/src/web_control_panel/: setup.cfg  setup.py
gripper_car_ws_v1 (copy)/: 2026-01-02-mediabhuvanesh181eafaa1eaf7f7eankubotrosgr.txt  ARM_TESTING.md  CONNECTION_GUIDE.md
gripper_car_ws_v1 (copy)/arduino/four_wheel_drive/: four_wheel_drive.ino
gripper_car_ws_v1 (copy)/arduino/mobile_base_controller/: mobile_base_controller.ino
gripper_car_ws_v1 (copy)/arduino/mobile_manipulator_unified/: mobile_manipulator_unified.ino
gripper_car_ws_v1 (copy)/maps/: slam_map_20260103.yaml  test_map.pgm
gripper_car_ws_v1 (copy)/src/simulation/: README.md
gripper_car_ws_v1/docs/: ARM_CONTROL.md  COMPLETE_WIRING_GUIDE.md  CONTROL_PANEL_GUIDE.md  OBSTACLE_AVOIDANCE_MANUAL.md  SESSION_2026_01_19.md  WIFI_SETUP.md  teleop_Base_doc.md
gripper_car_ws_v1/scripts/: robot.service  start_robot_full.sh  start_rpi_base.sh
gripper_car_ws_v1/src/mobile_base/base_controller/: CMakeLists.txt
gripper_car_ws_v1/src/mobile_base/base_controller/scripts/: base_hardware_bridge.py
gripper_car_ws_v1/src/mobile_manipulator/mobile_manipulator_application/: package.xml
(+240 files in other folders)
