<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Master bringup package for mobile manipulator - composition launch files</description>
  <maintainer email="ved@todo.todo">Ved</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Description packages -->
  <exec_depend>mobile_base_description</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>mobile_manipulator_description</exec_depend>

  <!-- Hardware interface -->
  <exec_depend>mobile_manipulator_hardware</exec_depend>

  <!-- Sensors -->
  <exec_depend>lidar_bringup</exec_depend>
  <exec_depend>camera_driver</exec_depend>

  <!-- Control -->
  <exec_depend>arm_moveit</exec_depend>
  <exec_depend>base_controller</exec_depend>

  <!-- Navigation -->
  <exec_depend>mobile_manipulator_navigation</exec_depend>

  <!-- Core ROS packages -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
