<?xml version="1.0"?>
<package format="3">
  <name>arm_sim</name>
  <version>0.0.0</version>
  <description>Simulation skeleton package for arm (launch/config only)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
